--- a/decky/static/sass/_buttons.scss
+++ b/decky/static/sass/_buttons.scss
@@ -127,7 +127,6 @@ button {
 			top: -15px;
 			right: 0;
 			bottom: 0;
-			z-index: 1;
 			width: 50px;
 			height: 50px;
 			background-color: transparentize($color-text-weak, 0.9);
@@ -147,7 +146,6 @@ button {
 		top: 2px;
 		margin-right: 1rem;
 		&::after {
-			z-index: 1;
 			position: absolute;
 			left: -31px;
 			top: -18px;
@@ -182,15 +180,15 @@ button {
 	a.btn, 
 	button {
 		position: relative;
-		z-index: 1;
+		z-index: 100;
 		margin-right: -4px; /* Removes the space next to an inline-block element*/
 		border-radius: 0;
-		&.primary { z-index: 3; }
 		&.w, 
 		&.u, 
 		&.r,
 		&.b, 
-		&.g { z-index: 2; }
+		&.g { z-index: 200; } /* Color buttons have higher priority */
+		&.primary { z-index: 300; } /* Primary buttons are highest priority */
 		&:first-child { border-radius: $border-radius 0 0 $border-radius; }
 		&:last-child {
 			margin-right: 6px;
