--- a/decky/static/sass/_card.scss
+++ b/decky/static/sass/_card.scss
@@ -19,6 +19,10 @@
 							transform: rotateY(180deg);
 		}
 	}
+	.card-container, .card-img {
+		width: 223px;
+		height: 311px;
+	}
 	/* Flipper enables 3-D flipping on hover for cards with content on the 
 		 backside */
 	.flipper {
@@ -32,6 +36,9 @@
 						transform-style: preserve-3d;
 	}
 	.card-img {
+		position: absolute;
+		top: 0;
+		left: 0;
 		box-shadow: 0 2px 4px shade($color-background, 15%);
 		background: tint($color-background, 6%);
 		-webkit-backface-visibility: hidden;
@@ -66,7 +73,6 @@
 			text-decoration: none;
 			text-shadow: 0 1px 2px rgba(0, 0, 0, 0.33);
 		}
-		&:first-child { z-index:  2; }
 		&:nth-child(2) {
 			-webkit-transform: rotateY(180deg);
 							transform: rotateY(180deg);
@@ -128,7 +134,7 @@
 
 .card-bg {
 	img {
-		z-index: -1;
+		z-index: -100; // Hacky z-index to push it to the background. 
 		position: fixed;
 		top: -35%;
 		left: -4%;
@@ -139,7 +145,7 @@
 						filter: blur(15px) grayscale(100%);
 	}
 	&::after {
-		z-index: -1;
+		z-index: -100; // Hacky z-index to push it to the background. 
 		position: fixed;
 		top: 0;
 		left: 0;
@@ -151,7 +157,6 @@
 }
 
 .row .card {
-	z-index: 1;
 	position: relative;
 	display: block;
 	height: auto;
@@ -173,7 +178,6 @@
 							0 2px 3px rgba(0, 0, 0, 0.15);
 	&::after {
 		position: absolute;
-		z-index: 1;
 		top: 0;
 		left: 0;
 		right: 0;
@@ -218,7 +222,6 @@
 						transition: -webkit-transform $transition;
 						transition: transform $transition;
 						transition: transform $transition, -webkit-transform $transition;
-		z-index: 2;
 		display: inline-block;
 		width: calc(100% + 2rem);
 		margin-left: -1rem;
@@ -231,7 +234,7 @@
 			display: block;
 			content: '';
 			position: absolute;
-			z-index: -1;
+			z-index: -100; /* Hack to push the background behind the image */
 			top: 0;
 			left: 0;
 			right: 0;
@@ -242,7 +245,6 @@
 			position: relative;
 			bottom: 65px;
 			left: -33px;
-			z-index: 1;
 			width: 413px;
 			&::before {  
 				content: " ";
