--- a/decky/static/sass/_pagination.scss
+++ b/decky/static/sass/_pagination.scss
@@ -8,7 +8,7 @@
 	margin: auto;
 	margin-top: 3rem;
 	.text {
-		z-index: 3;
+		z-index: 300;
 		position: relative;
 	}
 	.prev,
@@ -53,7 +53,7 @@
 	.last {
 		display: block;
 		position: absolute;
-		z-index: 1;
+		z-index: 100;
 		top: 0;
 		left: 0;
 		width: 55.15px;
@@ -97,7 +97,7 @@
 	}
 	.current-page {
 		position: relative;
-		z-index: 2;
+		z-index: 200;
 		width: 55.15px;
 		text-align: center;
 		margin: auto;
